# safeaipackage

./: .gitignore  Classification_acuuracy_sampling.ipynb  LICENSE  README.md  R_codes.R  employee.xlsx  setup.py
R_codes/: Simulation_1NON_NORM_ESWA.R  Simulation_1NORM_ESWA.R  Simulation_2NON_NORM_ESWA.R  Simulation_2NORM_ESWA.R  Simulation_experiment_A.R  Simulation_experiment_B.R  Simulation_experiment_C.R  (+1 more)
safeai/: README.md  main.py  pyproject.toml  sample.py
safeai/artefacts/jobs/job_115d1234-7a90-4762-9c41-dbf5da559977_date_20241026180845/: missing.json  unique.json  ytrue.json
safeai/artefacts/jobs/job_73182e4e-59f8-40f4-96a2-548aac79cafd_date_20241026163308/: ytrue.json
safeai/artefacts/jobs/job_e77a0ffc-6ce4-4270-9116-8b4aea875008_date_20241026163338/: missing.json  unique.json
safeai/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
safeai/catboost_info/learn/: events.out.tfevents
safeai/frc/: forms.py
safeai/src/: main.py
safeai/src/safeai/: agents.py  base.py  crew.py  enums.py  job.py  main.py  models.py  tasks.py
safeai/src/safeai/config/: agents.yaml
safeai/src/safeai/lib/config/: agents.py  experiments.py  tasks.py
safeai/src/safeai/lib/experimentation/: base.py  experimentation.py
safeai/src/safeai/lib/experimentation/metrics/: explainability.py  fairness.py  robustness.py
safeai/src/safeai/lib/experiments/: base.py  experiments.py  models.py
safeai/src/safeai/lib/jobs/: image.py  tabular.py  text.py
safeai/src/safeai/lib/jobs/models/: tabular.py
safeai/src/safeai/tools/: custom_tool.py
safeaidemo/: README.md  app.py  main.py  pyproject.toml  requirements.txt
safeaidemo/.streamlit/: config.toml
safeaidemo/safeai/: enums.py  models.py
safeaidemo/safeai/agents/execution_agent/: execute.py
safeaidemo/safeai/agents/experimentation_agent/: enums.py
safeaidemo/safeai/agents/generator_agent/: enums.py  forms.py  generator.py
safeaidemo/safeai/agents/generator_agent/models/: columns.py  prompts.py
safeaidemo/safeai/lib/: factory.py  forms.py  models.py
safeaidemo/safeai/lib/llms/: anthropic.py  gpt.py  llama.py  palm.py
safeaidemo/safeai/utils/: base.py
(+55 files in other folders)
