[tool.poetry]
name = "safeai"
version = "0.1.0"
description = "safeai using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
safeai = "safeai.main:run"
run_crew = "safeai.main:run"
train = "safeai.main:train"
replay = "safeai.main:replay"
test = "safeai.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
